namespace Constants
{
    public static class PlayerAnimationConstants
    {
        public const string Idle = "idle";
        public const string Move = "move";
        public const string Jump = "isJumping";
        public const string YVelocity = "yVelocity";
        public const string IsDashing = "isDashing";
        public const string IsWallSliding = "isWallSliding";
        public const string IsAttacking = "isAttacking";
        public const string ComboCounter = "comboCounter";
    }
}
